// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MergableState merges existing state 1`] = `
<div>
  {"initial":"should be different","otherState":"other value"}
</div>
`;

exports[`MergableState merges existing state multiple times 1`] = `
<div>
  {"initial":"should really be different","otherState":"other value"}
</div>
`;

exports[`MergableState merges existing state with function pattern 1`] = `
<div>
  {"initial":"should be different","otherState":"other value","counter":3}
</div>
`;

exports[`MergableState merges new state 1`] = `
<div>
  {"initial":"state","otherState":"other value"}
</div>
`;

exports[`MergableState merges new state with function pattern 1`] = `
<div>
  {"initial":"state","otherState":"other value"}
</div>
`;

exports[`MergableState retains methods on the state object 1`] = `
Array [
  <div>
    {"initial":"should be different"}
  </div>,
  <div>
    function doSomething() {
          return this.initial;
        }
  </div>,
]
`;

exports[`MergableState sets initial state 1`] = `
<div>
  {"initial":"state"}
</div>
`;
